--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ aiogram = "^3.1.1"
 aiosqlite = "^0.19.0"
 click = "^8.1.7"
 simple-settings = "^1.2.0"
-
+httpx = {"version" = "^0.25.0", "extras" = ["http2"]}
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.4.0"
