--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,10 @@ jobs:
             echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
             ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
         - name: create docker compose config
-          run: echo "${{ env.DOCKER_COMPOSE }}" | envsubst > docker-compose.yml
+          run: echo "${{ vars.DOCKER_COMPOSE }}" | envsubst > docker-compose.yml
         - name: copy docker compose config
           run: scp docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:.
         - name: connect and pull
-          run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose pull && docker compose up -d && exit"
+          run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose pull && docker-compose up -d && exit"
         - name: cleanup
           run: rm -rf ~/.ssh
