--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,47 +1,19 @@
-name: publish
+name: deploy
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
+    types:
+      - closed
     branches: [ "main" ]
-
-env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: ghcr.io
-  IMAGE_NAME: openai-all-stars/tgbot:latest
 
 jobs:
 
-    build:
-        name: Build
-        runs-on: ubuntu-latest
-
-        steps:
-        - uses: actions/checkout@v3
-        - name: Login
-          run: |
-            echo ${{ secrets.PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        - name: Build and Publish
-          run: |
-            docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-            docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        - name: Upload docker-compose.yml
-          uses: actions/upload-artifact@v3
-          with:
-            name: docker-compose.yml
-            path: docker-compose.yml
-
     deploy:
-        needs: build
         name: Deploy
         runs-on: ubuntu-latest
 
         steps:
-        - name: Download docker-compose.yml from build
-          uses: actions/download-artifact@v3
-          with:
-            name: docker-compose.yml
+        - uses: actions/checkout@v3
         - name: install ssh keys
           # check this thread to understand why its needed:
           # <https://stackoverflow.com/a/70447517>
@@ -59,5 +31,9 @@ jobs:
           run: scp docker-compose-secret.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:docker-compose.yml
         - name: connect and pull
           run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker-compose pull && docker-compose up -d && exit"
-        - name: cleanup
-          run: rm -rf ~/.ssh
+        - name: cleanup config
+          if: always()
+          run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "rm docker-compose.yml"
+        - name: cleanup keys
+          if: always()
+          run: rm -rf ~/.ssh docker-compose-secret.yml
