--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     environment:
       - OPENAI_API_KEY=$OPENAI_API_KEY
       - TG_TOKEN=$TG_TOKEN
-      - SECRET_PHRASE=$SECRET_PHRASE
+      - SECRET_INVITE=$SECRET_INVITE
       - SQLITE_PATH=/app/data/db.sqlite3
