--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ aiosqlite = "^0.19.0"
 click = "^8.1.7"
 simple-settings = "^1.2.0"
 httpx = {"version" = "^0.25.0", "extras" = ["http2"]}
+pyjwt = "^2.8.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.4.0"
