--- a/.github/workflows/invite.yml
+++ b/.github/workflows/invite.yml
@@ -11,6 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         env:
           SIMPLE_SETTINGS: tgbot.settings.prod
+          SECRET_INVITE: ${{ secrets.SECRET_INVITE }}
 
         steps:
         - name: Set up Python
@@ -23,4 +24,4 @@ jobs:
         - name: Install deps
           run: poetry install
         - name: Generate code
-          run: SECRET_INVITE={{ secrets.SECRET_INVITE }} tgbot generate-invite-code
+          run: tgbot generate-invite-code
