--- a/.github/workflows/invite.yml
+++ b/.github/workflows/invite.yml
@@ -10,6 +10,7 @@ jobs:
         name: Generate
         runs-on: ubuntu-latest
         env:
+          POETRY_VIRTUALENVS_CREATE: false
           SIMPLE_SETTINGS: tgbot.settings.prod
           SECRET_INVITE: ${{ secrets.SECRET_INVITE }}
 
