use yandex search

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,6 @@ services:
       - OPENAI_API_KEY=$OPENAI_API_KEY
       - TG_TOKEN=$TG_TOKEN
       - SECRET_INVITE=$SECRET_INVITE
+      - YANDEX_FOLDERID=$YANDEX_FOLDERID
+      - YANDEX_SEARCH_API_KEY=$YANDEX_SEARCH_API_KEY
       - SQLITE_PATH=/app/data/db.sqlite3
