--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -26,6 +26,8 @@ jobs:
             export TG_TOKEN=${{ secrets.TG_TOKEN }}
             export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
             export SECRET_INVITE=${{ secrets.SECRET_INVITE }}
+            export YANDEX_FOLDERID=${{ secrets.YANDEX_FOLDERID }}
+            export YANDEX_SEARCH_API_KEY=${{ secrets.YANDEX_SEARCH_API_KEY }}
             cat docker-compose.yml | envsubst > docker-compose-secret.yml
         - name: copy docker compose config
           run: scp docker-compose-secret.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:docker-compose.yml
