--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,9 @@ aiogram = "^3.1.1"
 aiosqlite = "^0.19.0"
 click = "^8.1.7"
 simple-settings = "^1.2.0"
-httpx = {"version" = "^0.25.0", "extras" = ["http2"]}
 pyjwt = "^2.8.0"
+aiohttp = "^3.9.1"
+backoff = "^2.2.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.4.0"
