--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ simple-settings = "^1.2.0"
 pyjwt = "^2.8.0"
 aiohttp = "^3.9.1"
 backoff = "^2.2.1"
+markdownify = "^0.12.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.4.0"
