--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ tgbot = "tgbot.cli:cli"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-openai = "^0.28.1"
+openai = "^1"
 aiogram = "^3.1.1"
 aiosqlite = "^0.19.0"
 click = "^8.1.7"
@@ -19,14 +19,20 @@ pyjwt = "^2.8.0"
 aiohttp = "^3.9.1"
 backoff = "^2.2.1"
 markdownify = "^0.12.1"
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.4.0"
-flake8 = "^6.0.0"
-pytest = "^7.4.3"
-aiohttp = "^3.9.1"
+flake8 = "^6"
+pytest = "^7"
+aiohttp = "^3"
 pytest-asyncio = "^0.21.1"
+pyright = "^1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+venvPath=".tox"
+reportMissingImports=false
+reportFunctionMemberAccess=false
