--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skipsdist = true
 [testenv]
 deps =
     poetry
-    pyright
+allowlist_externals = *
 commands =
     poetry install
     pyright src
