--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,9 @@ skipsdist = true
 [testenv]
 deps =
     poetry
+allowlist_externals = *
 commands =
     poetry install
-    mypy --ignore-missing-imports src
+    pyright src
     flake8 src
     pytest -xvv tests
