--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,4 @@ services:
       - YANDEX_FOLDERID=$YANDEX_FOLDERID
       - YANDEX_SEARCH_API_KEY=$YANDEX_SEARCH_API_KEY
       - SQLITE_PATH=/app/data/db.sqlite3
+      - STATSD_HOST=$STATSD_HOST
