--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ aiohttp = "^3.9.1"
 backoff = "^2.2.1"
 markdownify = "^0.12.1"
 httpx = "^0.27.0"
+statsd = "^4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6"
