--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,5 @@ services:
       - SECRET_INVITE=$SECRET_INVITE
       - YANDEX_FOLDERID=$YANDEX_FOLDERID
       - YANDEX_SEARCH_API_KEY=$YANDEX_SEARCH_API_KEY
+      - SENTRY_DSN=$SENTRY_DSN
       - SQLITE_PATH=/app/data/db.sqlite3
