--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ backoff = "^2.2.1"
 markdownify = "^0.12.1"
 httpx = "^0.27.0"
 statsd = "^4.0.1"
+sentry-sdk = "^2.3.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6"
