--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,6 +41,9 @@ jobs:
     deploy:
         name: Deploy
         runs-on: ubuntu-latest
+        needs:
+          - build
+          - tests
 
         steps:
         - uses: trstringer/manual-approval@v1
