--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   tgbot:
     container_name: tgbot
     image: ghcr.io/openai-all-stars/tgbot:latest
-    network_mode: host
+    environment:
+      - HOST_INTERNAL=host.docker.internal
     volumes:
       - ~/data:/app/data
     environment:
