--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ markdownify = "^0.12.1"
 httpx = "^0.27.0"
 statsd = "^4.0.1"
 sentry-sdk = "^2.3.1"
+pillow = "^10.3.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6"
