--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -37,4 +37,4 @@ jobs:
             python -m pip install --upgrade pip
             pip install ansible
         - name: Run Ansible Playbook
-          run: ansible-playbook playbook.yml
+          run: ansible-playbook deploy/install.yml
