--- a/deploy/inventory.ini
+++ b/deploy/inventory.ini
@@ -2,7 +2,7 @@
 duck
 
 [all:vars]
-ansible_host=${SSH_HOST}
-ansible_user=${SSH_USER}
+ansible_host={{ lookup("env", "SSH_HOST") }}
+ansible_user={{ lookup("env", "SSH_USER") }}
 ansible_become_timeout=30
 ansible_python_interpreter=/usr/bin/python3
