--- a/deploy/inventory.ini
+++ b/deploy/inventory.ini
@@ -3,6 +3,6 @@ duck
 
 [all:vars]
 ansible_host={{ lookup("env", "SSH_HOST") }}
-ansible_user={{ lookup("env", "SSH_USER") }}
+ansible_user=root
 ansible_become_timeout=30
 ansible_python_interpreter=/usr/bin/python3
