--- a/deploy/inventory.ini
+++ b/deploy/inventory.ini
@@ -1,8 +1,8 @@
 [web]
-duck
+duck-fast
 
 [all:vars]
-ansible_host=${SSH_HOST}
-ansible_user=${SSH_USER}
+ansible_host={{ lookup("env", "SSH_HOST") }}
+ansible_user=root
 ansible_become_timeout=30
 ansible_python_interpreter=/usr/bin/python3
