--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ tgbot = "tgbot.cli:cli"
 python = "^3.12"
 openai = "^1"
 aiogram = "^3.1.1"
-aiosqlite = "^0.19.0"
 click = "^8.1.7"
 simple-settings = "^1.2.0"
 pyjwt = "^2.8.0"
@@ -23,6 +22,7 @@ httpx = "^0.27.0"
 statsd = "^4.0.1"
 sentry-sdk = "^2.3.1"
 pillow = "^10.3.0"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6"
