--- a/deploy/install.yml
+++ b/deploy/install.yml
@@ -62,6 +62,7 @@
           - YANDEX_FOLDERID
           - YANDEX_SEARCH_API_KEY
           - SENTRY_DSN
+          - POSTGRES_DSN
 
     - name: Restart service
       service:
