--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pytest = "^7"
 aiohttp = "^3"
 pytest-asyncio = "^0.21.1"
 pyright = "^1"
+docker = "^7.1.0"
 
 [build-system]
 requires = ["poetry-core"]
