--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -47,3 +47,5 @@ jobs:
             pip install ansible
         - name: Run Ansible Playbook
           run: ansible-playbook deploy/install.yml
+          env:
+            GITHUB_WORKSPACE: ${{ github.workspace }}
