--- a/deploy/install.yml
+++ b/deploy/install.yml
@@ -25,7 +25,7 @@
 
     - name: Synchronize files
       synchronize:
-        src: "{{ GITHUB_WORKSPACE }}"
+        src: "{{ lookup('env', 'GITHUB_WORKSPACE') }}"
         dest: "/var/lib/{{ service_name }}"
         delete: yes
         recursive: yes
