--- a/deploy/install.yml
+++ b/deploy/install.yml
@@ -25,8 +25,8 @@
 
     - name: Synchronize files
       synchronize:
-        src: "{{ lookup('env', 'GITHUB_WORKSPACE') }}"
-        dest: "/var/lib/{{ service_name }}/"
+        src: "{{ lookup('env', 'GITHUB_WORKSPACE') }}/"
+        dest: "/var/lib/{{ service_name }}"
         delete: yes
         recursive: yes
  
