--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ statsd = "^4.0.1"
 sentry-sdk = "^2.3.1"
 pillow = "^10.3.0"
 asyncpg = "^0.29.0"
+fastapi = "^0.111.1"
+uvicorn = "^0.30.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6"
