--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = true
 deps =
     poetry
 commands =
-    poetry install --no-root
+    poetry install
     poetry run pyright src
     poetry run flake8 src
     poetry run pytest -xvv tests
