add web server (#76)
* add web server

* fix tox

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,8 @@ skipsdist = true
 [testenv]
 deps =
     poetry
-allowlist_externals = *
 commands =
     poetry install
-    pyright src
-    flake8 src
-    pytest -xvv tests
+    poetry run pyright src
+    poetry run flake8 src
+    poetry run pytest -xvv tests
