--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pillow = "^10.3.0"
 asyncpg = "^0.29.0"
 fastapi = "^0.111.1"
 uvicorn = "^0.30.1"
+pymupdf = "^1.24.9"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6"
