--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ asyncpg = "^0.29.0"
 fastapi = "^0.111.1"
 uvicorn = "^0.30.1"
 pymupdf = "^1.24.9"
+docker = "^7.1.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6"
